@@ -23,6 +23,8 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
+#ifdef KHTML_XSLT
+
 #ifndef XSLTProcessor_H
 #define XSLTProcessor_H
 
@@ -65,3 +67,5 @@ public:
 };
 
 #endif
+
+#endif // KHTML_XSLT
